# zai-coder

./: .dockerignore  .env.example  .gitattributes  .gitignore  2026-06-26-tui-template-system-design.md  AGENTS.md  BUILD_REPORT_V10_INTEGRATION_CORE.txt  BUILD_REPORT_V11_PRODUCTION_SAAS_CORE.txt  BUILD_REPORT_V12_GITHUB_READY.txt  BUILD_REPORT_V13_PRODUCTION_HARDENING.txt  BUILD_REPORT_V14_DEPLOY_INSTALLER.txt  BUILD_REPORT_V16_CLOUDFLARE_GO_LIVE.txt  BUILD_REPORT_V17_REAL_PROVIDER_ADAPTERS.txt  BUILD_REPORT_V21_MULTI_TENANT_CONTROL.txt  BUILD_REPORT_V24_PRODUCTION_API_GATEWAY.txt  BUILD_REPORT_V25_WORKER_ORCHESTRATION.txt  BUILD_REPORT_V26_AGENT_RUNTIME_SUPERVISOR.txt  BUILD_REPORT_V27_AGENT_MARKETPLACE_AND_SKILLS.txt  BUILD_REPORT_V29_RELEASE_AUTOMATION_UPDATE_CENTER.txt  BUILD_REPORT_V31_ENTERPRISE_COMPLIANCE_CENTER.txt  BUILD_REPORT_V32_ENTERPRISE_REPORTING_BOARD_PACK.txt  BUILD_REPORT_V33_ENTERPRISE_ADMIN_CONSOLE.txt  BUILD_REPORT_V34_CUSTOMER_PORTAL_ONBOARDING.txt  BUILD_REPORT_V36_FEEDBACK_ROADMAP_CENTER.txt  BUILD_REPORT_V37_KNOWLEDGE_BASE_HELP_CENTER.txt  BUILD_REPORT_V38_TEMPLATE_CONTENT_STUDIO.txt  BUILD_REPORT_V41_DEVELOPER_PORTAL_API_DOCS.txt  BUILD_REPORT_V42_PACKAGE_REGISTRY_MARKETPLACE.txt  BUILD_REPORT_V44_DATA_IMPORT_EXPORT_MIGRATION_CENTER.txt  BUILD_REPORT_V45_BACKUP_RESTORE_DISASTER_RECOVERY.txt  BUILD_REPORT_V49_PRODUCTION_READINESS_GO_LIVE_COMMAND_CENTER.txt  BUILD_REPORT_V4_CREATIVE_CORE.txt  BUILD_REPORT_V5_CREATIVE_AUTOMATION.txt  BUILD_REPORT_V6_GITHUB_RELEASE.txt  BUILD_REPORT_V7_MONETIZATION_CORE.txt  BUILD_REPORT_V9_DEPLOYMENT_CORE.txt  (+39 more)
(+1820 files in other folders)
