[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zai-coder-standalone"
version = "0.1.0"
description = "Local-first standalone AI coding and media-agent framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ZAI Coder" }]
dependencies = []

[project.scripts]
zai-coder = "zai_coder.cli:main"

[project.optional-dependencies]
tui = ["textual>=0.80"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zai_coder*"]
